--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,7 @@ dependencies = [
     "fastapi>=0.120.0",
     "psycopg2-binary>=2.9.11",
     "psycopg[binary]>=3.2.11",
+    "pydantic>=2.12.3",
     "python-dotenv>=1.1.1",
+    "uvicorn[standard]>=0.38.0",
 ]
